# mindocr

./: .gitignore
deploy/CppInfer/: CMakeLists.txt
deploy/CppInfer/BlockingQueue/: BlockingQueue.h
deploy/CppInfer/CommandParser/: CommandParser.h
deploy/CppInfer/DataType/: MessageData.h
deploy/CppInfer/Framework/: ModuleInfer.h
deploy/CppInfer/Framework/InferEngine/: lite_model.cpp
deploy/CppInfer/Processors/Common/: CollectProcess.h  HandoutProcess.h
deploy/CppInfer/Processors/Detection/: DetInferProcess.h  DetPreProcess.h
deploy/CppInfer/Processors/Recognition/: RecInferProcess.h  RecPostPress.h
deploy/cpp_infer/: API.md  CMakeLists.txt  MxBase分析.md  README.md  infer.cpp  main.cc
deploy/cpp_infer/DataType/: CommonData.h  ProcessData.h
deploy/cpp_infer/Framework/: ModuleBase.h  ModuleInfer.cpp  ModuleInfer.h  ModuleManager.h
deploy/cpp_infer/Framework/InferEngine/: LiteModel.cpp  LiteModel.h  MindxModel.h  ModelBase.h  lite_model.h  mindx_model.h  model_base.h
deploy/cpp_infer/Log/: Log.h  log.cpp
deploy/cpp_infer/Operators/Postprocess/: DbPostprocess.h  RecPostprocess.h
deploy/cpp_infer/Operators/Preprocess/: Transforms.h
deploy/cpp_infer/Pipeline/: Pipeline.h  PipelineArgs.h
deploy/cpp_infer/Processors/Classification/: ClsInferProcess.h  ClsPreProcess.h
deploy/cpp_infer/Processors/Common/: CollectProcess.h  DecodeProcess.h  HandoutProcess.h
deploy/cpp_infer/Processors/Detection/: DetPostProcess.h
deploy/cpp_infer/Processors/Recognition/: RecPreProcess.h
deploy/cpp_infer/StatusCode/: StatusCode.h
deploy/cpp_infer/Utils/: DataUtils.h  SafeUtils.cpp  SafeUtils.h  StringUtils.cpp  StringUtils.h
deploy/cpp_infer/blocking_queue/: blocking_queue.h
deploy/cpp_infer/data_type/: message_data.h  process_data.h
deploy/cpp_infer/error_code/: error_code.h
deploy/cpp_infer/framework/: module_base.h  module_data_type.h  module_infer.h  module_manager.h
deploy/cpp_infer/framework/infer_engine/: lite_model.h  mindx_model.h  model_base.h
deploy/cpp_infer/operators/postprocess/: db_postprocess.h  rec_postprocess.h
deploy/cpp_infer/operators/preprocess/: builder.h
deploy/cpp_infer/pipeline/: args.h  pipeline.h  pipeline_args.h
deploy/cpp_infer/processors/classfication/: cls_infer_process.h  cls_pre_process.h
deploy/cpp_infer/processors/classification/: cls_infer_process.h  cls_pre_process.h
deploy/cpp_infer/processors/common/: collect_process.h  decode_process.h  handout_process.h
deploy/cpp_infer/processors/detection/: det_infer_process.h  det_post_process.h  det_pre_process.h
deploy/cpp_infer/processors/recognition/: rec_infer_process.h  rec_post_press.h  rec_pre_process.h
deploy/cpp_infer/src/: CMakeLists.txt  main.cpp
deploy/cpp_infer/src/ascend_base/blocking_queue/: blocking_queue.h
deploy/cpp_infer/src/ascend_base/command_parser/: command_parser.h
deploy/cpp_infer/src/ascend_base/config_parser/: config_parser.h
deploy/cpp_infer/src/ascend_base/framework/module_manager/: module_base.cpp  module_base.h  module_factory.h  module_manager.cpp  module_manager.h
deploy/cpp_infer/src/core/model/backend/: lite_model.cpp  lite_model.h  mindx_model.cpp  mindx_model.h  model_base.cpp  model_base.h
deploy/cpp_infer/src/modules/crnn_post/: crnn_post.cpp  crnn_post.h
deploy/cpp_infer/src/modules/data_type/: data_type.h
deploy/cpp_infer/src/modules/dbnet_post/: dbnet_post.cpp  dbnet_post.h
deploy/cpp_infer/src/modules/processors/cls_infer_process/: cls_infer_process.cpp  cls_infer_process.h
deploy/cpp_infer/src/modules/processors/cls_post_process/: cls_post_process.cpp  cls_post_process.h
deploy/cpp_infer/src/modules/processors/cls_pre_process/: cls_pre_process.cpp  cls_pre_process.h
deploy/cpp_infer/src/modules/processors/collect_process/: collect_process.cpp  collect_process.h
deploy/cpp_infer/src/modules/processors/crnn_infer_process/: crnn_infer_process.cpp  crnn_infer_process.h
deploy/cpp_infer/src/modules/processors/crnn_post_process/: crnn_post_process.cpp  crnn_post_process.h
deploy/cpp_infer/src/modules/processors/crnn_pre_process/: crnn_pre_process.cpp  crnn_pre_process.h
deploy/cpp_infer/src/modules/processors/dbnet_infer_process/: dbnet_infer_process.cpp  dbnet_infer_process.h
deploy/cpp_infer/src/modules/processors/dbnet_post_process/: dbnet_post_process.cpp  dbnet_post_process.h
deploy/cpp_infer/src/modules/processors/dbnet_pre_process/: dbnet_pre_process.cpp  dbnet_pre_process.h
deploy/cpp_infer/src/modules/processors/hand_out_process/: hand_out_process.cpp  hand_out_process.h
deploy/cpp_infer/src/modules/profile/: profile.h
deploy/cpp_infer/src/modules/utils/: utils.h
deploy/cpp_infer/status_code/: status_code.h
deploy/cpp_infer_ddl/: linux_cpu_infer.md
deploy/cpp_infer_ddl/src/: CMakeLists.txt  main.cpp
deploy/cpp_infer_ddl/src/data_process/postprocess/: db_postprocess.cpp  db_postprocess.h  rec_postprocess.cpp  rec_postprocess.h
deploy/cpp_infer_ddl/src/parallel/framework/: module_manager.cpp
deploy/cpp_infer_ddl/src/parallel/module/classification/: cls_infer_node.cpp  cls_infer_node.h  cls_post_node.h  cls_pre_node.cpp
deploy/cpp_infer_ddl/src/parallel/module/common/: collect_node.cpp  hand_out_node.cpp
deploy/cpp_infer_ddl/src/parallel/module/detection/: det_infer_node.cpp  det_infer_node.h  det_post_node.cpp  det_pre_node.cpp  det_pre_node.h
deploy/cpp_infer_ddl/src/parallel/module/recognition/: rec_infer_node.cpp  rec_infer_node.h  rec_post_node.cpp  rec_pre_node.cpp  rec_pre_node.h
deploy/cpp_infer_ddl/src/utils/: utils.cpp  utils.h
deploy/cpp_infer_dll/: linux_cpu_infer.md
deploy/cpp_infer_dll/src/: CMakeLists.txt  build.bat  infer.bat  main.cpp  ocr.cpp  ocr.h
deploy/cpp_infer_pretty/: CMakeLists.txt  build.bat  infer.bat  main.cpp
deploy/cpp_infer_pretty/include/: args.h  mindocr.h  mslite_inference.h  ocr_cls.h  ocr_det.h  ocr_rec.h  postprocess_op.h  preprocess_op.h  utility.h
deploy/cpp_infer_pretty/src/: args.cpp  mindocr.cpp  mslite_inference.cpp  ocr_cls.cpp  ocr_det.cpp  ocr_rec.cpp  postprocess_op.cpp  preprocess_op.cpp  utility.cpp
(+22 files in other folders)
